# django-skeleton

./: .flake8  .pre-commit-config.yaml  LICENSE  README.md  gitignore  pyproject.toml  pytest.ini  tox.ini
project_name/: manage.py
project_name/conf/: asgi.py  urls.py  wsgi.py
project_name/conf/settings/: base.py  config.json  local.py  production.py  test.py
project_name/users/: apps.py  models.py
