[tool.coverage.run]
branch = true
source = ['{{ project_name }}']
omit = [
  '*/migrations/*',
  '*/manage.py',
  '*/asgi.py',
  '*/wsgi.py',
  '*/settings/*',
  '*/__init__.py'
]

[tool.isort]
known_third_party = ["django", "factory", "pytest"]
combine_as_imports = true
default_section = "THIRDPARTY"
include_trailing_comma = true
line_length = 79
multi_line_output = 3
known_first_party = ["{{ project_name }}"]
known_django = "django"
sections = "FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.venv
  | _build
  | build
  | dist
  | migrations
)/
'''

[tool.poetry]
name = "{{ project_name }}"
version = "0.1.0"
description = ""
authors = [""]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
